# Additive

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  SConstruct
Source/: AdditiveGUI.h  Scope.h  additive.cpp
